--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,11 @@
             android:name=".AboutActivity"
             android:configChanges="orientation|screenSize|uiMode">
 		</activity>
+        <activity 
+            android:name=".TerminalActivity"
+            android:configChanges="orientation|screenSize|uiMode"
+            android:windowSoftInputMode="adjustResize">
+        </activity>
 		<service
 			android:name=".services.MessagingService"
 			android:exported="false">
