--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,10 @@ android {
 		sourceCompatibility JavaVersion.VERSION_1_8
 		targetCompatibility JavaVersion.VERSION_1_8
 	}
+    
+    aaptOptions {
+        additionalParameters "--java", "$buildDir/gen/data_binding_base_class_source_out/debug/out"
+    }
 	
 	lintOptions {
 		abortOnError false
@@ -79,6 +83,11 @@ stringfog {
     key 'WVV0aGMwaEFZVzVFVW05SlJFbGtaUT09'
     enable true
     implementation 'com.github.megatronking.stringfog.xor.StringFogImpl'
+}
+
+task copyBindings(type: Copy) {
+    from "build/generated/data_binding_base_class_source_out/debug/out"
+    into 'build/gen'
 }
 
 dependencies {
