Terminal is now fully implemented

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,6 +115,7 @@ dependencies {
 	implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
 	implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
 	implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
 	implementation 'androidx.multidex:multidex:2.0.1'
 	implementation 'androidx.preference:preference:1.1.1'
 	implementation 'androidx.recyclerview:recyclerview:1.2.1'
