Added: Show api information of classes, methods and fields

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,6 +130,7 @@ dependencies {
 	implementation 'com.google.firebase:firebase-messaging'
     
 	// Local projects
+    implementation project(':api-info')
 	implementation project(':treeview')
     implementation project(':lsp')
     implementation project(':emulator')
