--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.itsaky.androidide'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'stringfog'
@@ -136,6 +135,8 @@ dependencies {
     implementation project(':emulator')
     implementation project(':emulatorview')
     implementation project(':javapoet')
+    
+    implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.12.0'
 	
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
 	
