--- a/lsp/build.gradle
+++ b/lsp/build.gradle
@@ -25,15 +25,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    // LSP4J
-    implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.12.0'
-    
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'xerces:xercesImpl:2.12.1'
-    implementation 'xml-apis:xml-apis:1.4.01'
-    implementation 'xml-resolver:xml-resolver:1.2'
-    implementation 'org.jsoup:jsoup:1.14.2'
-    implementation ('com.kotcrab.remark:remark:1.0.0') {
-        exclude group: 'org.jsoup', module: 'jsoup'
-    }
+    implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'org.eclipse.xtend:org.eclipse.xtend.core:2.24.0'
 }
