--- a/lsp/build.gradle
+++ b/lsp/build.gradle
@@ -26,5 +26,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.code.gson:gson:2.8.7'
-    implementation 'org.eclipse.xtend:org.eclipse.xtend.core:2.24.0'
+    implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.12.0'
+    implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc:0.12.0'
 }
