--- a/lsp/build.gradle
+++ b/lsp/build.gradle
@@ -26,4 +26,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.code.gson:gson:2.8.7'
+    // LSP4J
+    implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.12.0'
 }
