--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,10 +21,13 @@ jobs:
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
     - name: Build with Gradle
-      run: ./gradlew build
-    - name: Upload Debug APK
-      uses: actions/upload-artifact@v2
+      uses: eskatos/gradle-command-action@v1
         with:
-          name: apk-debug
-          path: app/build/outputs/apk/debug
+          arguments: build
+          distributions-cache-enabled: true
+          dependencies-cache-enabled: true
+          configuration-cache-enabled: true
+
+    
