--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,7 +23,7 @@ jobs:
       run: chmod +x gradlew
 
     - name: Build with Gradle
-      uses: eskatos/gradle-command-action@v1
+    - uses: eskatos/gradle-command-action@v1
         with:
           arguments: build
           distributions-cache-enabled: true
