--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 	<uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 		
     <application
-        tools:ignore="UnusedAttribute"
+        tools:ignore="UnusedAttribute,MediaCapabilities"
         android:name=".app.StudioApp"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
