Fixed ILayoutInflater not inflating any views

--- a/layout-inflater/build.gradle
+++ b/layout-inflater/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     implementation 'com.blankj:utilcodex:1.30.6'
     implementation 'org.jsoup:jsoup:1.14.2'
     
+    implementation project (":common")
     api project (':sdk-info')
 }
