--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,14 +18,9 @@ android {
     }
 	
 	compileOptions {
-		coreLibraryDesugaringEnabled true
-		sourceCompatibility rootProject.ext.javaSourceVersion
+        coreLibraryDesugaringEnabled true
+        sourceCompatibility rootProject.ext.javaSourceVersion
         targetCompatibility rootProject.ext.javaTargetVersion
-	}
-    
-    // This is to get completions for R.java in AIDE
-    aaptOptions {
-        additionalParameters "--java", "$buildDir/gen"
     }
 	
 	lintOptions {
@@ -81,41 +76,34 @@ android {
 	}
 }
 
-// This is to get completions for view binding classes in AIDE
-task copyBindings(type: Copy) {
-    from "build/generated/data_binding_base_class_source_out/debug/out"
-    into 'build/gen'
-}
-
 dependencies {
 	// Annotation processors
 	annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 	
-	implementation 'com.blankj:utilcodex:1.30.6'
-	implementation 'com.github.abhishekti7:UnicornFilePicker:1.0.2'
-	implementation 'com.github.bumptech.glide:glide:4.12.0'
-	implementation 'com.github.megatronking.stringfog:xor:1.1.0'
-	implementation 'com.github.piruin:quickaction:2.4.3'
-    implementation 'com.github.Rosemoe:BlockLinkedList:1.0.0'
-	implementation 'com.github.smart-fun:XmlToJson:1.5.1'
-	implementation 'com.google.code.gson:gson:2.8.8'
-	implementation 'com.google.guava:guava:30.1.1-android'
+	implementation common.utilcode
+	implementation common.file_picker
+	implementation common.glide
+	implementation common.quickaction
+    implementation common.bll
+	implementation common.xml2json
+	implementation google.gson
+	implementation google.guava
 	
-    implementation 'org.jsoup:jsoup:1.14.2'
+    implementation common.jsoup
     
 	// AndroidX
-	implementation 'androidx.annotation:annotation:1.3.0'
-	implementation 'androidx.appcompat:appcompat:1.4.0'
-	implementation 'androidx.cardview:cardview:1.0.0'
-	implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-	implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
-	implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
-    implementation 'androidx.gridlayout:gridlayout:1.0.0'
-	implementation 'androidx.preference:preference:1.1.1'
-	implementation 'androidx.recyclerview:recyclerview:1.2.1'
-	implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-	implementation 'androidx.vectordrawable:vectordrawable-animated:1.1.0'
-    implementation 'com.google.android.material:material:1.4.0'
+	implementation androidx.annotation
+	implementation androidx.appcompat
+	implementation androidx.cardview
+	implementation androidx.constraintlayout
+	implementation androidx.coordinatorlayout
+	implementation androidx.drawer
+    implementation androidx.grid
+	implementation androidx.preference
+	implementation androidx.recyclerview
+	implementation androidx.vectors
+	implementation androidx.animated_vectors
+    implementation google.material
 	
 	// Firebase
 	implementation platform('com.google.firebase:firebase-bom:29.0.0')
@@ -133,7 +121,7 @@ dependencies {
     implementation project(':common')
     
     // LSP4J
-    implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.12.0'
+    implementation common.lsp4j
     
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
 	
