--- a/emulatorview/build.gradle
+++ b/emulatorview/build.gradle
@@ -24,5 +24,5 @@ android {
 }
 
 dependencies {
-    implementation "androidx.annotation:annotation:1.2.0"
+    implementation androidx.annotation
 }
