--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,9 +1,34 @@
 ext {
-    
-    // Common dependencies across all subprojects
-    common {
-        utilcode = 'com.blankj:utilcodex:1.30.6'
-        
-    }
-    
+    common = [
+            utilcode: 'com.blankj:utilcodex:1.30.6',
+            lsp4j: 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.12.0',
+            file_picker: 'com.github.abhishekti7:UnicornFilePicker:1.0.2',
+            glide: 'com.github.bumptech.glide:glide:4.12.0',
+            quickaction: 'com.github.piruin:quickaction:2.4.3',
+            bll: 'com.github.Rosemoe:BlockLinkedList:1.0.0',
+            xml2json: 'com.github.smart-fun:XmlToJson:1.5.1',
+            jsoup: 'org.jsoup:jsoup:1.14.2',
+            antlr4: 'org.antlr:antlr4-runtime:4.9.2'
+    ]
+
+    androidx = [
+            annotation: 'androidx.annotation:annotation:1.3.0',
+            appcompat: 'androidx.appcompat:appcompat:1.4.0',
+            cardview: 'androidx.cardview:cardview:1.0.0',
+            constraintlayout: 'androidx.constraintlayout:constraintlayout:2.1.2',
+            coordinatorlayout: 'androidx.coordinatorlayout:coordinatorlayout:1.1.0',
+            drawer: 'androidx.drawerlayout:drawerlayout:1.1.1',
+            grid: 'androidx.gridlayout:gridlayout:1.0.0',
+            preference: 'androidx.preference:preference:1.1.1',
+            recyclerview: 'androidx.recyclerview:recyclerview:1.2.1',
+            vectors: 'androidx.vectordrawable:vectordrawable:1.1.0',
+            animated_vectors: 'androidx.vectordrawable:vectordrawable-animated:1.1.0',
+            multidex: 'androidx.multidex:multidex:2.0.1'
+    ]
+
+    google = [
+            material: 'com.google.android.material:material:1.4.0',
+            gson: 'com.google.code.gson:gson:2.8.8',
+            guava: 'com.google.guava:guava:30.1.1-android'
+    ]
 }
