--- a/javapoet/build.gradle
+++ b/javapoet/build.gradle
@@ -25,5 +25,5 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation google.gson
 }
