--- a/lsp/build.gradle
+++ b/lsp/build.gradle
@@ -25,7 +25,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.google.code.gson:gson:2.8.7'
+    implementation google.gson
     // LSP4J
-    implementation 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.12.0'
+    implementation common.lsp4j
 }
