--- a/sdk-info/build.gradle
+++ b/sdk-info/build.gradle
@@ -25,6 +25,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.blankj:utilcodex:1.30.6'
-    implementation 'org.jsoup:jsoup:1.14.2'
+    implementation common.utilcode
+    implementation common.jsoup
 }
