--- a/treeview/build.gradle
+++ b/treeview/build.gradle
@@ -25,5 +25,5 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation androidx.appcompat
 }
