--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,11 @@ android {
 }
 
 dependencies {
-	// Annotation processors
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+
+    // Annotation processors
 	annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 	
 	implementation common.utilcode
