--- a/common/src/main/assets/data/common/androidide.init.gradle
+++ b/common/src/main/assets/data/common/androidide.init.gradle
@@ -26,7 +26,7 @@ initscript {
 
     repositories {
         maven {
-            url file("${System.getenv("HOME")}/.androidide")
+            url file("${System.getenv("HOME")}/.androidide/repo")
         }
     }
 
