Added base files for XML language server Updated AGP version Removed unnecessary versionName and versionCode from library modules Do not sync runWithTask with 'lock' in SynchronizedTask

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,16 +22,9 @@ android {
         sourceCompatibility rootProject.ext.javaSourceVersion
         targetCompatibility rootProject.ext.javaTargetVersion
     }
-	
-	lintOptions {
-		abortOnError false
-		disable "VectorPath",
-				"NestedWeights",
-				"ContentDescription",
-                "SmallSp"
-    }
-	
-	buildFeatures {
+
+
+    buildFeatures {
         viewBinding true
     }
     
@@ -65,17 +58,16 @@ android {
             signingConfig signingConfigs.release
         }
     }
-	
-	packagingOptions {
-		exclude 'META-INF/eclipse.inf'
-		exclude 'about_files/LICENSE-2.0.txt'
-		exclude 'plugin.xml'
-		exclude 'plugin.properties'
-        exclude 'about.mappings'
-        exclude 'about.properties'
-        exclude 'about.ini'
-        exclude 'modeling32.png'
-	}
+    packagingOptions {
+        resources {
+            excludes += ['META-INF/eclipse.inf', 'about_files/LICENSE-2.0.txt', 'plugin.xml', 'plugin.properties', 'about.mappings', 'about.properties', 'about.ini', 'modeling32.png']
+        }
+    }
+
+    lint {
+        abortOnError false
+        disable 'VectorPath', 'NestedWeights', 'ContentDescription', 'SmallSp'
+    }
 }
 
 // Build the gradle plugin before building app
