Moved XMLCompletionService in LSP implementation

--- a/lsp/xml/build.gradle
+++ b/lsp/xml/build.gradle
@@ -46,5 +46,8 @@ dependencies {
 
     implementation project(':lsp:api')
 
+    compileOnly project(':lexers')
     compileOnly project(':common')
+    compileOnly project(':sdk-info')
+    compileOnly common.antlr4
 }
