--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,6 +121,7 @@ dependencies {
 
     implementation project(':lsp:api')
     implementation project(':lsp:java')
+    implementation project(':lsp:xml')
     
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
 	
