Provide Android framework resources as suggestions in UI Designer

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -35,4 +35,6 @@ dependencies {
 	implementation androidx.animated_vectors
     
     api androidx.multidex
+
+    testImplementation tests.junit4
 }
