--- a/xml-inflater/build.gradle
+++ b/xml-inflater/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     
     implementation project (":common")
     api project (':sdk-info')
+
+    testImplementation tests.junit4
 }
