--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
@@ -79,13 +80,11 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
 
     // Annotation processors
 	annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-	
+    
+    implementation common.editor
 	implementation common.utilcode
 	implementation common.file_picker
 	implementation common.glide
@@ -117,6 +116,10 @@ dependencies {
 	implementation 'com.google.firebase:firebase-crashlytics'
 	implementation 'com.google.firebase:firebase-messaging'
     
+    // Kotlin
+    implementation "androidx.core:core-ktx:1.7.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    
 	// Local projects here
 	implementation project(':treeview')
     implementation project(':emulatorview')
@@ -126,10 +129,13 @@ dependencies {
 
     implementation project(':lsp:api')
     implementation project(':lsp:java')
+    implementation project(':lsp:xml')
     
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
 	
 	coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 }
+
+
 
 
